--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.1",
+    "cloudinary": "^1.41.0",
     "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
