--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.28.2",
     "axios": "^1.6.1",
     "cloudinary": "^1.41.0",
     "firebase": "^10.6.0",
