--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/code": "^2.8.0",
     "@editorjs/editorjs": "^2.28.2",
+    "@editorjs/embed": "^2.7.0",
+    "@editorjs/header": "^2.8.1",
+    "@editorjs/image": "^2.8.2",
+    "@editorjs/inline-code": "^1.4.0",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/list": "^1.9.0",
+    "@editorjs/marker": "^1.3.0",
+    "@editorjs/quote": "^2.5.0",
     "axios": "^1.6.1",
     "cloudinary": "^1.41.0",
     "firebase": "^10.6.0",
